--- a/Lesson_1/WEBP/webp.html
+++ b/Lesson_1/WEBP/webp.html
@@ -124,10 +124,10 @@
                 преимущесвто
             </td>
             <td>
-                В этом примере мы видим, оптимальны вариант<br>
+                В этом примере мы видим, оптимальный вариант<br>
                 между качеством изображения и его объемом.<br>
                 Также фон данного изображения выглядит более<br>
-                 расплывчатым, чем при использовании PNG формата.
+                "аквараельным", чем при использовании PNG и JPEG формата.
             </td>
         </tr>
     </table>
