--- a/Lesson_1/DOP/SKOBKI2/skobki2.html
+++ b/Lesson_1/DOP/SKOBKI2/skobki2.html
@@ -6,7 +6,7 @@
 </head>
 <body background="img/skobki_jpeg.jpeg" style="background-repeat:no-repeat;">
     <div style="margin-left:92px; margin-top: 190px;">
-        <img src="img/skobki_png.png">
+        <img src="img/skobki_png.png" alt="layer_2_39kb" title="layer_2_39kb">
     </div>
 </body>
 </html>
