--- a/Lesson-3/FONT_GWF/font_gwf.html
+++ b/Lesson-3/FONT_GWF/font_gwf.html
@@ -16,7 +16,7 @@
         }
 
         div{ 
-            background-image: url(img/постаретая-бумажная-текстура-винтажная-бежевая-предпосылка-134321119.jpg);
+            background-image: url(img/fon_bumaga.jpg);
             background-repeat: repeat-y;
             text-align: justify;
             width: 760px;
