--- a/Lesson-3/FONT_GWF/font_gwf.html
+++ b/Lesson-3/FONT_GWF/font_gwf.html
@@ -20,7 +20,7 @@
             background-repeat: repeat-y;
             text-align: justify;
             width: 760px;
-            margin: 0% 20% 0% 20%;
+            margin: 0 auto;
             padding: 10px 10px 10px 10px;
             
         }      
