--- a/Lesson-3/FONT_GWF/font_gwf.html
+++ b/Lesson-3/FONT_GWF/font_gwf.html
@@ -2,17 +2,17 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@1,400;1,500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Alice&family=Pattaya&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="fonts/font.css" >
     <style>
         body{
-            font-size: 18px;
+            font-size: 22px;
             color: rgb(41, 26, 6);
         }
 
         h1,h3,h6{
             text-align: center;
-            font-family: 'Merriweather', serif;
+            font-family: 'Alice', serif;
         }
 
         div{ 
@@ -25,13 +25,12 @@
             
         }      
         .rasskaz{
-            font-family: 'Merriweather', serif; 
+            font-family: 'Alice', serif;
         }
         .people_says{
-            font-family: 'EB Garamond', serif;
-            font-size: 22px;
+            font-family: 'Pattaya', italic;
+            font-size: 20px;
             font-weight: 500;
-            
         }
     </style>
     <title>font_gwf</title>
@@ -39,7 +38,7 @@
 <body>
 <div>   
 <h1>Легенда о Данко из рассказа<br> 
-    &ldquo;Старуха Изергиль"
+    &ldquo;Старуха Изергиль&rdquo;
 </h1>
 <h3>(текст, эпизод, фрагмент, отрывок)</h3>        
 <h6>(отрывок из главы III)</h6>
