--- a/Lesson-3/DOP_3/OLD_TAG_FONT/old_tag_font.html
+++ b/Lesson-3/DOP_3/OLD_TAG_FONT/old_tag_font.html
@@ -47,5 +47,33 @@
 получается CA0D 0000 0000, если удалять справа по 2 символа, то получим CA 00 00 ((#ca0000),(RGB(202, 0, 0))),
 но не #ca0d00, что соответствует rgb(202, 13, 0).
 На глаз разница в цвете RGB(202, 0, 0) и rgb(202, 13, 0) небольшая, но вопрос остался.-->
+    <p>
+        Ну и еще немного исторических интересностей про цвета.
+    </p>
+    <p>
+        Вашему вниманию предлагается палитра цветов, рекомендуемых для экранного дизайна.
+        Безопасные цвета всегда неизменны при переходе от одного браузера к другому,
+        от одного монитора к другому, или от одной платформы к другой, с их различными 
+        разрешениями и возможностями цветопередачи.
+    </p>
+    <p>
+        Если веб-браузер не в состоянии правильно отобразить тот или иной цвет,
+        то он пытается подобрать похожий или смешивает несколько соседних цветов.
+        Может так случиться, что исходный цвет будет замещён чем-то совершенно неподходящим.
+    </p>
+    <p>
+        Сегодня уже весьма спорна целесообразность использования безопасной палитры,
+        однако используя её, вы будете уверены, что цвета будут выглядеть неизменно хорошо 
+        и без искажений даже на очень старых компьютерах, вплоть до 8-битного режима отображения 
+        с поддержкой всего 256 цветов.
+    </p>
+    <p>
+        Безопасные цвета были выведены математически, а не потому, что они кому-то больше пришлись 
+        по душе. Для получения безопасного цвета из Красного, Зелёного и Синего, нужно использовать 
+        только данные десятичные значения: 0, 51, 102, 153, 204, 255 — и никакие другие. Каждое из
+        трёх шестнадцатеричных значений не должно отличаться от 00, 33, 66, 99, CC, FF.
+    </p>
+    <img src="img/4184b5818a78.png" title="таблица безопасных цветов">
+
 </body>
 </html>
