--- a/Lesson_4/OTSTUPI_FON_TABLICI/otstuti_obrazec_001.html
+++ b/Lesson_4/OTSTUPI_FON_TABLICI/otstuti_obrazec_001.html
@@ -6,12 +6,12 @@
 </head>
 <body>
     <h2 style="border: red; border-style: dashed;">Simon and Garfunkel</h2>
-    <div style="border: green 1px; border-style: solid; margin-bottom: 20px; width: 600px; padding: 10px;">
-    <p>
+    <div style="border: green 1px; border-style: solid; margin-bottom: 20px; width: 600px; padding: 20px;">
+    <p style="font-family: serif;">
        В 1964 году на лейбле Columbia был выпущен их дебютный альбом &laquo;Wednesday Morning 3AM&raquo;.
        Пластинка прошла практически незамеченной, после чего пути музыкантов пошли врозь.
     </p>
-    <p>   
+    <p style="font-family: sans-serif;">   
        В это время на долю музыкантов выпал неожиданный успех. Летом 1965 года импресарио 
        Тим Уилсон, известный продюсированием ранних альбомов Дилана, осовременил звучание 
        песни &laquo;The Sounds of Silence&raquo;, написанной Саймоном под впечатлением от убийства 
@@ -20,7 +20,7 @@
        Эта запись была признана музыкальными критиками квинтэссенцией
        входившего тогда в моду фолк-рока.
     </p>   
-    <p>   
+    <p style="font-family: cursive;">   
        Хотя Саймон и Гарфанкел были шокированы тем, что их самый успешный сингл был аранжирован
        и выпущен без их участия, его триумфальное восхождение в чартах заставило их вновь
        объединить усилия и развернуть своё творчество в сторону приглушённого акустического
@@ -41,7 +41,7 @@
     </ul>
     </div>
     
-    <p style="border: solid green 1px;">
+    <p style="font-family:monospace; border: solid green 1px;">
        Несмотря на отдельные яркие песни, альбомы Саймона и Гарфанкела были по большей части неровными и оставляли ощущение недоговорённости. Наиболее радикальные критики были склонны обвинять дуэт в слащавости и стерильности.
     </p>
 </body>
