--- a/DHL/DHL.HTML
+++ b/DHL/DHL.HTML
@@ -3,13 +3,14 @@
 <head>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="fonts/font.css">
+    <link rel="stylesheet" href="media/media.css">
     <meta charset="UTF-8">
     <title>DHL</title>
 </head>
 <body>
     <div class="wrapper">
-        <div class="header-top-back">
-            <div class="header-top-contant">
+        <div class="header-top-back clearfix">
+            <div class="header-top-contant contant clearfix">
                 <div class="language">
                     <p>English</p>
                 </div>
@@ -19,23 +20,27 @@
                 </div>
             </div>
         </div>
-        <div class="header-menu-back">
-            <div class="header-menu-contant">
-                <div class="img-logo"><img src="img/logo.png" alt="logo"></div>
-                <ul class="top-menu">
-                    <li><a href="#">EXPRESS</a></li>
-                    <li><a href="#">PARCEL & ECOMMERCE</a></li>
-                    <li><a href="#">LOGISTICS</a></li>
-                    <li><a href="#">MAIL</a></li>
-                    <li><a href="#">PRESS</a></li>
-                    <li><a href="#">ABOUT</a></li>
-                </ul>
-                <div class="img-searcher"><img src="img/searcher.png" alt="searcher"></div>
+        <div class="header-menu-back clearfix">
+            <div class="header-menu-contant contant clearfix">
+                <div class="img-logo">
+                    <img src="img/logo.png" alt="logo">
+                </div>
+                <div class="menu-search">
+                    <ul class="top-menu">
+                        <li><a href="#">EXPRESS</a></li>
+                        <li><a href="#">PARCEL & ECOMMERCE</a></li>
+                        <li><a href="#">LOGISTICS</a></li>
+                        <li><a href="#">MAIL</a></li>
+                        <li><a href="#">PRESS</a></li>
+                        <li><a href="#">ABOUT</a></li>
+                    </ul>
+                    <img src="img/searcher.png" alt="searcher">
+                </div>
             </div>
         </div>
-        <div class="main-back">
-            <div class="main-contant">
-                <div class="main-text-selection">
+        <div class="main-back clearfix">
+            <div class="main-contant contant clearfix">
+                
                     <h1>We Deliver
                     <br> With Speed</h1>
                     <ul class="main-menu">
@@ -43,22 +48,22 @@
                         <li><p>QUICK</p></li>
                         <li><p>24/7 SUPPORTS</p></li>
                     </ul>
-                    <div class="two-btm"></div>
+                    <div class="two-btm">
                         <div class="btm-yellow">
                             <span>LEARN MORE</span>
                         </div>
                         <div class="btm-white-brdr">
                             <span>DHL WORLDWIDE</span>
                         </div>
-                </div>
+                    </div>    
             </div>
         </div>
-        <div class="services-back">
-            <div class="services-contant">
+        <div class="services-back clearfix">
+            <div class="services-contant contant clearfix">
                 <div class="word-servis-back">
                     <h2>Awesome Services</h2>
                 </div>
-                <div class="services-items">
+                <div class="services-items clearfix">
                     <div class="item item-1">
                         <img src="img/item-1.jpg" alt="item">
                         <h4>EXPRESS SERVICES</h4>
@@ -87,11 +92,13 @@
                         <span>Read more</span>
                     </div>
                     <div class="location">
-                        <div class="loc-contant">
-                            <h4>DHI Worldwide</h4>
-                            <img src="img/line.png" alt="line">
-                            <p>When an unknown prot
-                            <br>printer type and scra</p>
+                        <div class="loc-contant clearfix">
+                            <div class="loc-cont-text">
+                                <h4>DHI Worldwide</h4>
+                                <img src="img/line.png" alt="line">
+                                <p>When an unknown prot
+                                <br>printer type and scra</p>
+                            </div>
                             <!--selection locations-->
                             <div class="btm-yellow loc-btm">
                                 <span>EXPLORE</span>
@@ -101,20 +108,20 @@
                 </div>
             </div>
         </div>
-        <div class="services-second-back">
-            <div class="services-second-contant">
+        <div class="services-second-back clearfix">
+            <div class="services-second-contant contant clearfix">
                 <h2>One of the best international service provider</h2>
                 <img src="img/play.png" alt="play">
-                <div class="serv-sec-items-img">
+                <div class="serv-sec-items-img clearfix">
                     <img src="img/item-4.jpg" alt="item">
                     <img src="img/item-5.jpg" alt="item">
                     <img src="img/item-6.jpg" alt="item">
                 </div>
             </div>
         </div>
-        <div class="find-service-back">
-            <div class="find-service-contant">
-                <div class="items-info">
+        <div class="find-service-back clearfix">
+            <div class="find-service-contant contant clearfix">
+                <div class="items-info clearfix">
                     <div class="info-back">
                         <div class="info-text">
                             <h4>Aerospace Provider</h4>
@@ -152,8 +159,8 @@
                 <img src="img/logo-group.jpg" alt="logo-group">
             </div>
         </div>
-        <div class="deliver-back">
-            <div class="deliver-contant">
+        <div class="deliver-back clearfix">
+            <div class="deliver-contant contant clearfix">
                 <div class="deliver-text">
                     <h3>EXCELLENCE. SIMPLYE DELIVERED.</h3>
                     <p>International express deliveries; global freight forwarding by air, sea, road and rail;
@@ -166,8 +173,9 @@
                 </div>
             </div>
         </div>
-        <div class="header-back">
-            <div class="header-contant">
+        <div class="footer-back clearfix">
+            <div class="footer-contant contant clearfix">
+                <div class="logo-friends-box clearfix">
                     <div class="logo-friends-back">
                          <img src="img/logo-friend-1.jpg" alt="themeforest">
                     </div>
@@ -180,6 +188,7 @@
                     <div class="logo-friends-back">
                         <img src="img/logo-friend-4.jpg" alt="themeforest">
                     </div>
+                </div>
                     <div class="info-about info-1">
                         <h4>CONTACT CENTER</h4>
                         <ul>
