--- a/FOOD_YORK/FOOD_YORK.html
+++ b/FOOD_YORK/FOOD_YORK.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="fonts/font.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="media/style.css">
+    <link rel="stylesheet" href="media/media.css">
     <meta charset="UTF-8">
     <title>FOOD YORK</title>
 </head>
