--- a/Lesson_7/MAKET_DIV/maket_div.html
+++ b/Lesson_7/MAKET_DIV/maket_div.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/style.css" >
-    <link rel="stylesheet" type="text/css" href="media/style.css">
+    <link rel="stylesheet" type="text/css" href="media/media.css">
     <title>MAKET_DIV</title>
 </head>
 <body>
